# OpenGLObjViewer

./: CMakeLists.txt  main.cpp
assets/shaders/: basic_lighting.frag  basic_lighting.vert  texture.vert
shaders/: basic.vert  basic_lighting.frag  basic_lighting.vert  camera.vert
src/: stb_image.cpp
src/Game/: entity.cpp  entity.h  world.cpp  world.h
src/app/: application.cpp  application.h  main_window.cpp  main_window.h  window.cpp  window.h
src/render/: AssetManager.cpp  AssetManager.h  camera.cpp  camera.h  camera_data.h  geometry.hpp  geometry_generator.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
